<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_food"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customfontstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/slide_title"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/facebook_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:src="@drawable/facebook" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/customfontstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rounded_pinkl"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:src="@drawable/google" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/customfontstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/google"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l1Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/email_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:src="@drawable/mail" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/customfontstyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLater"
                    style="@style/customfontstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/later"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/line" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customfontstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/privacy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>